force-app/main/default/objects/Annual_Review__c/Annual_Review__c.object-meta.xml
<CustomObject>
    <description>Stores the responses to questions that participants to the VHF scheme need to complete on an annual basis</description>
    <label>Annual Review</label>
    <nameField>
        <displayFormat>AR-{0000000000}</displayFormat>
        <label>Annual Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Reviews</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>