force-app/main/default/objects/Annual_Review__c/fields/Absence_details_2__c.field-meta.xml
<CustomField>
    <fullName>Absence_details_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Absence #2 Please Specify</label>
    <type>TextArea</type>
</CustomField>