force-app/main/default/objects/Annual_Review__c/fields/Absence_details_4__c.field-meta.xml
<CustomField>
    <fullName>Absence_details_4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Absence #4 Please Specify</label>
    <type>TextArea</type>
</CustomField>