force-app/main/default/objects/Annual_Review__c/fields/Absence_details__c.field-meta.xml
<CustomField>
    <fullName>Absence_details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Absence #1 Please Specify</label>
    <type>TextArea</type>
</CustomField>