force-app/main/default/objects/Annual_Review__c/fields/Absence_end_date__c.field-meta.xml
<CustomField>
    <fullName>Absence_end_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Absence #1 End Date</label>
    <type>Date</type>
</CustomField>