force-app/main/default/objects/Annual_Review__c/fields/Absence_reason_4__c.field-meta.xml
<CustomField>
    <fullName>Absence_reason_4__c</fullName>
    <label>Absence #4 Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Absence_reason</valueSetName>
    </valueSet>
</CustomField>