force-app/main/default/objects/Annual_Review__c/fields/Absence_reason__c.field-meta.xml
<CustomField>
    <fullName>Absence_reason__c</fullName>
    <description>Question: Reason for absence</description>
    <label>Absence #1 Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Absence_reason</valueSetName>
    </valueSet>
</CustomField>