force-app/main/default/objects/Annual_Review__c/fields/Absence_start_date_4__c.field-meta.xml
<CustomField>
    <fullName>Absence_start_date_4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Absence #4 Start Date</label>
    <type>Date</type>
</CustomField>