force-app/main/default/objects/Annual_Review__c/fields/Absent_from_the_property__c.field-meta.xml
<CustomField>
    <fullName>Absent_from_the_property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Absent from the property</label>
    <type>Checkbox</type>
</CustomField>