force-app/main/default/objects/Annual_Review__c/fields/Acquired_another_property__c.field-meta.xml
<CustomField>
    <fullName>Acquired_another_property__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: I / we have not acquired any land zoned residential or mixed use or residential real property, in whole or in part, except with prior written consent in accordance with clause 10.12 of the Participation Agreement.</description>
    <label>Acquired another property</label>
    <type>Checkbox</type>
</CustomField>