force-app/main/default/objects/Annual_Review__c/fields/Acquired_land_details__c.field-meta.xml
<CustomField>
    <fullName>Acquired_land_details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acquired land details</label>
    <type>TextArea</type>
</CustomField>