force-app/main/default/objects/Annual_Review__c/fields/Acquired_non_VHF_property_address__c.field-meta.xml
<CustomField>
    <fullName>Acquired_non_VHF_property_address__c</fullName>
    <description>single field storing the full acquired property address</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Acquired (non VHF) property address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>