force-app/main/default/objects/Annual_Review__c/fields/Acquired_property_country__c.field-meta.xml
<CustomField>
    <fullName>Acquired_property_country__c</fullName>
    <defaultValue>&quot;Australia&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Acquired property country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>