force-app/main/default/objects/Annual_Review__c/fields/Acquired_property_postcode__c.field-meta.xml
<CustomField>
    <fullName>Acquired_property_postcode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acquired property postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>