force-app/main/default/objects/Annual_Review__c/fields/Acquired_property_state__c.field-meta.xml
<CustomField>
    <fullName>Acquired_property_state__c</fullName>
    <label>Acquired property state</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Australian Capital Territory</fullName>
            </value>
            <value>
                <fullName>New South Wales</fullName>
            </value>
            <value>
                <fullName>Northern Territory</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>