force-app/main/default/objects/Annual_Review__c/fields/Acquired_property_street__c.field-meta.xml
<CustomField>
    <fullName>Acquired_property_street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acquired property street</label>
    <type>TextArea</type>
</CustomField>