force-app/main/default/objects/Annual_Review__c/fields/Acquired_property_suburb__c.field-meta.xml
<CustomField>
    <fullName>Acquired_property_suburb__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acquired property suburb</label>
    <length>200</length>
    <type>Text</type>
</CustomField>