force-app/main/default/objects/Annual_Review__c/fields/Annual_Review_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Annual Review End Date</label>
    <type>Date</type>
</CustomField>