force-app/main/default/objects/Annual_Review__c/fields/Annual_review_period__c.field-meta.xml
<CustomField>
    <fullName>Annual_review_period__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Annual_Review_Start_Date__c )),NOT(ISBLANK(Annual_Review_End_Date__c))),
TEXT(DAY(Annual_Review_Start_Date__c)) + &quot; &quot; + CASE(MONTH(Annual_Review_Start_Date__c),1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;None&quot;) + &quot; &quot;+TEXT(YEAR(Annual_Review_Start_Date__c)) + &quot; - &quot; +
TEXT(DAY(Annual_Review_End_Date__c)) + &quot; &quot; + CASE(MONTH(Annual_Review_End_Date__c),1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;None&quot;) + &quot; &quot;+TEXT(YEAR(Annual_Review_End_Date__c)),&apos;&apos;)</formula>
    <label>Annual review period</label>
    <type>Text</type>
</CustomField>