force-app/main/default/objects/Annual_Review__c/fields/Annual_Review_Processing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review_Processing_Comments__c</fullName>
    <description>Comments related to Annual Review processing.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Annual Review Processing Comments</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>