force-app/main/default/objects/Annual_Review__c/fields/BypassValidation__c.field-meta.xml
<CustomField>
    <fullName>BypassValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in process builder and flow to allow updates to records otherwise locked by validations rules.</description>
    <label>BypassValidation</label>
    <type>Checkbox</type>
</CustomField>