force-app/main/default/objects/Annual_Review__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Campaign</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Annual Reviews</relationshipLabel>
    <relationshipName>Annual_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>