force-app/main/default/objects/Annual_Review__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>A field that must be set before an Annual Review can be cancelled</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Reason</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>