force-app/main/default/objects/Annual_Review__c/fields/Completion_Comments__c.field-meta.xml
<CustomField>
    <fullName>Completion_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completion Comments</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>