force-app/main/default/objects/Annual_Review__c/fields/Details_of_interest_in_property_shared__c.field-meta.xml
<CustomField>
    <fullName>Details_of_interest_in_property_shared__c</fullName>
    <description>Question: Please provide details of the other person(s) and the nature of the interest provided</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Details of interest in property shared</label>
    <type>TextArea</type>
</CustomField>