force-app/main/default/objects/Annual_Review__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date when annual review is due. Ten business days(14 Calendar days) adjusted for when final day falls on a public holiday or weekend.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>