force-app/main/default/objects/Annual_Review__c/fields/Gross_Annual_Income_2__c.field-meta.xml
<CustomField>
    <fullName>Gross_Annual_Income_2__c</fullName>
    <description>Income of Participant Name 2 which also rolls up to the Combined Gross Annual Income</description>
    <inlineHelpText>Gross annual income is the sum of your ‘assessable’ (or taxable) income and your ‘exempt’ income (as defined on the ATO website). If you have a salary sacrifice arrangement, your Gross Annual Income needs to be adjusted to reflect the arrangement.</inlineHelpText>
    <label>Gross Annual Income 2</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>