force-app/main/default/objects/Annual_Review__c/fields/Gross_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Gross_Annual_Income__c</fullName>
    <description>Question:

I / we confirm that the applicable Gross Annual Income for the past 12 months was

$

and is comprised of assessable and exempt income of:

$                             [Name of Applicant 1]

$                             [Name of Applicant 2]

$                             [Name of Applicant 3]

$                             [Name of Applicant 4]</description>
    <label>Combined Gross Annual Income</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>