force-app/main/default/objects/Annual_Review__c/fields/Have_used_Property_insurance_claim__c.field-meta.xml
<CustomField>
    <fullName>Have_used_Property_insurance_claim__c</fullName>
    <description>Question: Please provide details here and attach any supporting documentation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Have used Property insurance claim for</label>
    <type>TextArea</type>
</CustomField>