force-app/main/default/objects/Annual_Review__c/fields/Income_threshold_breach__c.field-meta.xml
<CustomField>
    <fullName>Income_threshold_breach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income threshold breach</label>
    <type>Checkbox</type>
</CustomField>