force-app/main/default/objects/Annual_Review__c/fields/Increased_loan_amount__c.field-meta.xml
<CustomField>
    <fullName>Increased_loan_amount__c</fullName>
    <label>Increased loan amount</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>