force-app/main/default/objects/Annual_Review__c/fields/Inputs_From_Participant__c.field-meta.xml
<CustomField>
    <fullName>Inputs_From_Participant__c</fullName>
    <description>Comments associated with additional supporting documents that participants may provide upon request.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Inputs From Participant</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>