force-app/main/default/objects/Annual_Review__c/fields/Interest_in_property_shared__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_property_shared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: In the past 12 months, have you given any party, other than the Victorian Government and your Lender, a security interest in or over the Property?</description>
    <label>Interest in the property shared</label>
    <type>Checkbox</type>
</CustomField>