force-app/main/default/objects/Annual_Review__c/fields/Is_Renovation_approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Renovation_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: Has the renovation been approved by the Homebuyer Fund Team?</description>
    <label>Is Renovation approved</label>
    <type>Checkbox</type>
</CustomField>