force-app/main/default/objects/Annual_Review__c/fields/Lease_details__c.field-meta.xml
<CustomField>
    <fullName>Lease_details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lease details</label>
    <type>TextArea</type>
</CustomField>