force-app/main/default/objects/Annual_Review__c/fields/Loan_changed_to_interest_only__c.field-meta.xml
<CustomField>
    <fullName>Loan_changed_to_interest_only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: I / we confirm that my / our Loan has been a principal and interest Loan continuously over the past 12 months and will continue to be a principal and interest Loan from a Panel Financier . Most recent home loan statement to be provided.</description>
    <label>Loan changed to interest only</label>
    <type>Checkbox</type>
</CustomField>