force-app/main/default/objects/Annual_Review__c/fields/Maintained_and_protected_the_property__c.field-meta.xml
<CustomField>
    <fullName>Maintained_and_protected_the_property__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: Over the past 12 months I / we have in accordance with clause 10.6 of the Participation Agreement and as prudent owners would have maintained and protected the Property and will continue to maintain and protect the Property</description>
    <label>Maintained and protected the property</label>
    <type>Checkbox</type>
</CustomField>