force-app/main/default/objects/Annual_Review__c/fields/New_lender_not_a_Panel_Financier__c.field-meta.xml
<CustomField>
    <fullName>New_lender_not_a_Panel_Financier__c</fullName>
    <description>Question: Please specify</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Participant has refinanced the loan with a lender who is not on the Panel</inlineHelpText>
    <label>New lender (not a Panel Financier)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>