force-app/main/default/objects/Annual_Review__c/fields/New_Panel_Financier__c.field-meta.xml
<CustomField>
    <fullName>New_Panel_Financier__c</fullName>
    <description>Question: Select the new Panel Financier</description>
    <label>New Panel Financier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Panel_Financier</valueSetName>
    </valueSet>
</CustomField>