force-app/main/default/objects/Annual_Review__c/fields/Outgoings_paid__c.field-meta.xml
<CustomField>
    <fullName>Outgoings_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: Over the past 12 months I / we have in accordance with clause 10.2(p) of the Participation Agreement paid on time all outgoings payable by me/us in relation to the Property.</description>
    <label>Outgoings paid</label>
    <type>Checkbox</type>
</CustomField>