force-app/main/default/objects/Annual_Review__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>Used for Email template merge as cross object lookups are not allowed. 
 See idea (https://trailblazer.salesforce.com/ideaView?id=08730000000Brk7AAC) for more details</description>
    <formula>Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>