force-app/main/default/objects/Annual_Review__c/fields/Participant_has_declared_bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Participant_has_declared_bankruptcy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: I am / we are not bankrupt and have not committed an act of bankruptcy or executed a deed of assignment, deed of arrangement, debt agreement or personal insolvency agreement under the Bankruptcy Act 1966 (Clth).</description>
    <label>Participant has declared bankruptcy</label>
    <type>Checkbox</type>
</CustomField>