force-app/main/default/objects/Annual_Review__c/fields/Participant_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name_1__c</fullName>
    <description>Name entered by primary participant while filling out the annual review to associate with the gross annual income</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Name 1</label>
    <length>120</length>
    <type>Text</type>
</CustomField>