force-app/main/default/objects/Annual_Review__c/fields/Participant_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name_3__c</fullName>
    <description>Name entered by primary participant while filling out the annual review to associate with the gross annual income.  Note: May not match lookup field Participant 3 as that was populated by batch job prior to annual review being filled out</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Name 3</label>
    <length>120</length>
    <type>Text</type>
</CustomField>