force-app/main/default/objects/Annual_Review__c/fields/Participant_Names__c.field-meta.xml
<CustomField>
    <fullName>Participant_Names__c</fullName>
    <formula>(IF(ISBLANK(Primary_Participant__r.Id), &quot;&quot;, Primary_Participant__r.FirstName + &quot; &quot; +  Primary_Participant__r.LastName) 
+  (IF(ISBLANK(Participant_Two__r.Id), &quot;&quot;,  &quot;, &quot; +Participant_Two__r.FirstName  + &quot; &quot; + Participant_Two__r.LastName))
+  (IF(ISBLANK(Participant_Three__r.Id), &quot;&quot;,  &quot;, &quot; +Participant_Three__r.FirstName  + &quot; &quot; + Participant_Three__r.LastName))
+  (IF(ISBLANK(Participant_Four__r.Id), &quot;&quot;,  &quot;, &quot; +Participant_Four__r.FirstName  + &quot; &quot; + Participant_Four__r.LastName)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Names</label>
    <type>Text</type>
</CustomField>