force-app/main/default/objects/Annual_Review__c/fields/Participant_Two__c.field-meta.xml
<CustomField>
    <fullName>Participant_Two__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account Id of additional participant populated during monthly batch job and used by validation rule to limit access</description>
    <label>Participant Two</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Annual Reviews (Participant Two)</relationshipLabel>
    <relationshipName>Annual_Reviews_P2</relationshipName>
    <type>Lookup</type>
</CustomField>