force-app/main/default/objects/Annual_Review__c/fields/Payment_made_relating_to_windfall_gain__c.field-meta.xml
<CustomField>
    <fullName>Payment_made_relating_to_windfall_gain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: Did you make a payment to the Homebuyer Fund team in relation to the windfall gain</description>
    <label>Payment made relating to windfall gain</label>
    <type>Checkbox</type>
</CustomField>