force-app/main/default/objects/Annual_Review__c/fields/Plan_to_use_Property_insurance_claim__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_use_Property_insurance_claim__c</fullName>
    <description>Question: What do you plan to do with the amount received?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan to use Property insurance claim for</label>
    <type>TextArea</type>
</CustomField>