force-app/main/default/objects/Annual_Review__c/fields/Primary_Participant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Participant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Primary participant linked to the annual review</description>
    <label>Primary Participant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Annual Reviews</relationshipLabel>
    <relationshipName>Annual_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>