force-app/main/default/objects/Annual_Review__c/fields/Primary_Participant_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Primary_Participant_Firstname__c</fullName>
    <formula>Primary_Participant__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Participant Firstname</label>
    <type>Text</type>
</CustomField>