force-app/main/default/objects/Annual_Review__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Property</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Annual Reviews</relationshipLabel>
    <relationshipName>Annual_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>