force-app/main/default/objects/Annual_Review__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>Property__r.ShippingStreet &amp; BR() &amp;
Property__r.ShippingCity &amp; &quot;, &quot; &amp;
Property__r.ShippingState &amp; &quot; &quot; &amp;
Property__r.ShippingPostalCode &amp; BR() &amp;
Property__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>