force-app/main/default/objects/Annual_Review__c/fields/Property_continuously_occupied__c.field-meta.xml
<CustomField>
    <fullName>Property_continuously_occupied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: I / we have over the past 12 months continuously occupied and intend to continuously occupy the Property as my / our principal place of residence, in accordance with clause 10.11 of the Participation Agreement.</description>
    <inlineHelpText>In case of multiple participants, the absence needs to be reported if all the participants did not continuously occupy the property.</inlineHelpText>
    <label>Property continuously occupied</label>
    <type>Checkbox</type>
</CustomField>