force-app/main/default/objects/Annual_Review__c/fields/Property_insurance_claim_applied__c.field-meta.xml
<CustomField>
    <fullName>Property_insurance_claim_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: Over the past 12 months I / we have in accordance to clause 10.5 of the Participation Agreement not:

applied proceeds of an insurance claim of more than $10,000 without prior written consent.</description>
    <label>Property insurance claim applied</label>
    <type>Checkbox</type>
</CustomField>