force-app/main/default/objects/Annual_Review__c/fields/Property_insurance_claim_usage_plan__c.field-meta.xml
<CustomField>
    <fullName>Property_insurance_claim_usage_plan__c</fullName>
    <description>Question: Please provide details regarding the insurance claim, including the reason for claim, the amount of the claim and how you used or intend to use these funds</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Property insurance claim usage plan</label>
    <type>TextArea</type>
</CustomField>