force-app/main/default/objects/Annual_Review__c/fields/Property_insurance_claimed__c.field-meta.xml
<CustomField>
    <fullName>Property_insurance_claimed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: Over the past 12 months I / we have in accordance to clause 10.5 of the Participation Agreement not:

1. received proceeds of an insurance claim of more than $10,000 in relation to the Property;</description>
    <label>Property insurance claimed</label>
    <type>Checkbox</type>
</CustomField>