force-app/main/default/objects/Annual_Review__c/fields/Property_insured__c.field-meta.xml
<CustomField>
    <fullName>Property_insured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question: I / we have in accordance with clause 10.5 of the Participation Agreement:

1.continuously held and will continue to hold insurance (including public liability insurance) for the Property over the past 12 months; and
2. continue to hold insurance for the Property for the full replacement value or on a reinstatement basis.*</description>
    <label>Property insured</label>
    <type>Checkbox</type>
</CustomField>