force-app/main/default/objects/Annual_Review__c/fields/Property_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Property_Is_Active__c</fullName>
    <description>Used to drive dynamic action behaviour to hide buttons for inactive properties, not required in page layouts</description>
    <formula>Property__r.IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Is Active</label>
    <type>Checkbox</type>
</CustomField>