force-app/main/default/objects/Annual_Review__c/fields/Property_Leased__c.field-meta.xml
<CustomField>
    <fullName>Property_Leased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property Leased</label>
    <type>Checkbox</type>
</CustomField>